objects/Building_units__c.object
<CustomObject>
    <fields>
        <fullName>BuildingunitsAREA__c</fullName>
        <label>Building units AREA</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Building units</relationshipLabel>
        <relationshipName>Building_units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property_Type__c</fullName>
        <formula>BuildingunitsAREA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Building units</label>
    <nameField>
        <label>Building units Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>